<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:context=".ui.ProfileSettings"
    android:layout_height="match_parent"
    android:id="@+id/profilesettings"
    android:padding="25dp"
    android:background="#000000">

    <TextView
        android:id="@+id/my_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="252dp"
        android:text="@string/my_prof"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="52dp"
        android:layout_height="63dp"
        android:background="#AB1DB954"
        android:padding="8dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/change_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_dash" />

    <Button
        android:id="@+id/goback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:backgroundTint="#AB1DB954"
        android:clickable="true"
        android:text="Go Back"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/my_profile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
    android:id="@+id/change_username"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:fontFamily="sans-serif-medium"
    android:text="@string/change_username"
    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
    android:textColor="#FFFFFF"
    android:textSize="17sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
    android:id="@+id/editUsername"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:ems="10"
    android:inputType="text"
    android:text="@string/username"
    android:textAppearance="@style/TextAppearance.AppCompat.Small"
    android:textColor="@color/white"
    android:textSize="13sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/saveUsername"
    app:layout_constraintTop_toBottomOf="@+id/change_username" />

    <ImageButton
    android:id="@+id/saveUsername"
    android:layout_width="67dp"
    android:layout_height="46dp"
    android:backgroundTint="#00000000"
    android:scaleType="fitCenter"
    app:srcCompat="?android:attr/textCheckMark"
    app:tint="@color/white"
    tools:srcCompat="@android:drawable/ic_menu_save"
    app:layout_constraintBottom_toBottomOf="@+id/editUsername"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginEnd="16dp"/>

    <View
    android:id="@+id/divider"
    android:layout_width="0dp"
    android:layout_height="1dp"
    android:background="@color/green"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/editUsername"
    android:layout_marginTop="16dp"/>

    <TextView
    android:id="@+id/change_password"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:fontFamily="sans-serif-medium"
    android:text="@string/change_pw"
    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
    android:textColor="#FFFFFF"
    android:textSize="17sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/divider" />

    <EditText
    android:id="@+id/editPassword"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:ems="10"
    android:inputType="textPassword"
    android:text="@string/prompt_password"
    android:textColor="#FFFFFF"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/savePassword"
    app:layout_constraintTop_toBottomOf="@+id/change_password" />

    <ImageButton
    android:id="@+id/savePassword"
    android:layout_width="67dp"
    android:layout_height="46dp"
    android:backgroundTint="#00000000"
    android:scaleType="fitCenter"
    app:srcCompat="?android:attr/textCheckMark"
    app:tint="@color/white"
    tools:srcCompat="@android:drawable/ic_menu_save"
    app:layout_constraintBottom_toBottomOf="@+id/editPassword"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginEnd="16dp"/>

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editPassword"
        android:layout_marginTop="8dp"/>

    <Button
    android:id="@+id/button"
    style="@style/Widget.AppCompat.Button.Borderless"
    android:layout_width="153dp"
    android:layout_height="38dp"
    android:layout_marginTop="32dp"
    android:clickable="true"
    android:gravity="right"
    android:minWidth="80dip"
    android:minHeight="40dip"
    android:text="Delete Account"
    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
    android:textColor="#FF0000"
    android:textStyle="bold"
    app:layout_constraintTop_toBottomOf="@+id/savePassword"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>